# website

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  CONTRIBUTORS.txt  Dockerfile  LICENSE  Makefile  MigrationsFile  MigrationsFileOld  PreDeployRender.sh  Procfile  README.md  README.rst  buildRender.sh  crontab  docker-compose.yml  fabfile.py  local.yml  manage.py  package-lock.json  package.json  production.yml  pyproject.toml  readme.md  render.yaml  requirements.txt  setup.cfg  urls.py  webpack-stats.json  webpack.config.js
.envs/.local/: .postgres
.github/workflows/: django.yml
apps/core/: admin.py  apps.py  storages.py  utils.py
apps/gitlab/: apps.py  models.py  signals.py
apps/users/: admin.py  apps.py  models.py  urls.py
config/: celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/pycharm/: configuration.rst
klimaat_helpdesk/: conftest.py
klimaat_helpdesk/cms/: admin.py  apps.py  blocks.py  models.py  views.py
klimaat_helpdesk/core/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
klimaat_helpdesk/experts/: admin.py  apps.py  models.py  urls.py  views.py
render-hosting/: PreDeployRenderTest.sh  buildRender.sh  readme.md
requirements/: base.in  base.txt  deploy.in  deploy.txt  development.in  development.txt  local.txt  production.in  production.txt  render.in  render.txt  testing.in
settings/: asgi.py  base.py  development.py  gitlab.py  production.py  render-test.py  render.py  testing.py  wsgi.py
(+209 files in other folders)
