[project]
name = "klimaathelpdeskpyproject"
version = "1.0"

[tool.fourdigits]
slack_channel = "klimaat-helpdesk"

[tool.fourdigits.envs.tst]
# This section has no values yet.

[tool.fourdigits.envs.acc]
# This section has no values yet.

[tool.fourdigits.envs.prd]
# This section has no values yet.
